# emacs-native

./: .gitignore  emacs-native.cabal  emacs-native.def  flake.nix
.github/workflows/: ci.yaml
bench/: FuzzyBench.hs  FuzzyProf.hs
cbits/: emacs_wrapper.c
lib/Emacs/: EprojTagIndex.hs  FastFileSearch.hs  FuzzyMatch.hs  Grep.hs  Init.hs
src/Control/: LensBlaze.hs
src/Control/Concurrent/: Fork.hs  ParPair.hs
src/Data/: Eproj.hs  Filesystem.hs  FuzzyMatch.hs  FuzzyMatchBaseline.hs  Ignores.hs  MinMaxIdx.hs  NBSem.hs  Packed.hs  Regex.hs  StrIdx.hs  UnicodeUtils.hs
src/Data/Bits/: Ext.hs
src/Data/ByteString/Char8/: Ext.hs
src/Data/Emacs/: Path.hs
src/Data/Filesystem/: Find.hs  Grep.hs
src/Data/FuzzyMatch/: SortKey.hs
src/Data/Primitive/Array/: Growable.hs
src/Data/Primitive/PrimArray/: Ext.hs  Growable.hs  GrowableMut.hs
src/Data/Primitive/SmallArray/: Growable.hs
src/Data/Text/: Ext.hs
src/Data/Vector/: Ext.hs  FixedSort.hs  Growable.hs  GrowableMut.hs  PredefinedSorts.hs
src/Data/Vector/Algorithms/Search/: Ext.hs
src/Emacs/: EarlyTermination.hs  EprojTagIndex.hs  FastFileSearch.hs  FuzzyMatch.hs  Grep.hs  Utils.hs
src/System/OsPath/: Ext.hs
test/: EmacsNativeTest.hs
test-data/: crlf.txt  more-unicode.txt  multiline.txt  single-line.txt  tab.txt  test.txt
test/Control/LensBlaze/: Tests.hs
test/Data/Filesystem/Grep/: Tests.hs
test/Data/FuzzyMatch/: Tests.hs
test/Data/FuzzyMatchBaseline/: Tests.hs
test/Data/UnicodeUtils/: Tests.hs
test/Data/Vector/Ext/: Tests.hs
