cabal-version: 3.0

name:
  emacs-native
version:
  0.1.0.0
synopsis:
  Emacs modules implemented in Haskell for my configuration
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>
stability: stable
tested-with:
  GHC == 8.2.2, GHC == 8.4.3, GHC == 8.6.5

build-type:
  Simple

flag runtime-checks
  description:
    Enable more runtime checks
  default:
    False
  manual:
    True

common ghc-options
  default-language:
    Haskell2010

  ghc-options:
    -funbox-strict-fields
    -Weverything
    -Wno-redundant-constraints
    -Wno-type-defaults
    -Wno-implicit-prelude
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: ghc-options
  if flag(runtime-checks)
    cpp-options: -DRUNTIME_CHECKS
  exposed-modules:
    Control.LensBlaze

    Data.ByteString.Char8.Ext
    Data.Emacs.Path
    Data.Eproj
    Data.Filesystem
    Data.FuzzyMatch
    Data.FuzzyMatch.SortKey
    Data.NBSem
    Data.Regex
    Data.Primitive.PrimArray.Ext
    Data.Text.Ext
    Data.Vector.Ext
    Data.Vector.FixedSort
    Data.Vector.PredefinedSorts

    Emacs.EprojTagIndex
    Emacs.FastFileSearch
    Emacs.FuzzyMatch
    Emacs.Grep
  hs-source-dirs:
    src
  build-depends:
    , atomic-counter
    , base >= 4.7
    , bimap
    , bytestring
    , containers
    , emacs-module >= 0.2
    , exceptions
    , filepath
    , lifted-async
    , monad-control
    , monad-par
    , mtl
    , path >= 0.6.1
    , path-io
    , prettyprinter >= 1.7
    , prettyprinter-combinators
    , primitive
    , primitive-sort
    -- , radix-tree
    , regex-tdfa
    , stm
    , stm-chans
    , streaming-commons
    , text
    , transformers-base
    , tuples-homogenous-h98
    , vector >= 0.13
    -- , regex-tdfa-text
  ghc-prof-options:
    -fprof-late

foreign-library emacs-native
  import: ghc-options
  -- options: standalone
  type:
    native-shared
  lib-version-info:
    0:0:0
  c-sources:
    cbits/emacs_wrapper.c
  includes:
    emacs-module.h
  install-includes:
    emacs-module.h
  include-dirs:
    cbits

  if os(Windows)
    options: standalone
  --   mod-def-file: MyForeignLib.def

  build-depends:
    , base >=4.7
    , emacs-module
    , emacs-native
  hs-source-dirs:
    lib
  other-modules:
    Emacs.Init
  ghc-options:
    -threaded

test-suite emacs-native-test
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    test/EmacsNativeTest.hs
  hs-source-dirs:
    .
    test
  other-modules:
    Control.LensBlaze.Tests
    Data.FuzzyMatch.Tests
    Data.Vector.Ext.Tests
  build-depends:
    , QuickCheck
    , base
    , emacs-native
    , primitive
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , vector
  ghc-options:
    -rtsopts
    -main-is EmacsNativeTest

benchmark fuzzyprof
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    bench/FuzzyProf.hs
  hs-source-dirs:
    .
    bench
  build-depends:
    , base >= 4.9
    , deepseq
    , emacs-native
    , primitive
    , text
    , vector
  ghc-options:
    -rtsopts
--     -threaded
--     "-with-rts-opts=-N -A32M"
    -main-is FuzzyProf
  ghc-prof-options:
    -fprof-late

benchmark fuzzybench
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    bench/FuzzyBench.hs
  hs-source-dirs:
    .
    bench
  build-depends:
    , base >= 4.9
    , deepseq
    , emacs-native
    , primitive
    , tasty-bench
    , text
    , vector
  ghc-options:
    -rtsopts
--     -threaded
--     "-with-rts-opts=-N -A32M"
    -main-is FuzzyBench
